--- a/inc.html
+++ b/inc.html
@@ -14,7 +14,7 @@
                 <li>
                     <a href="prologue.html" class="menutitle">ABOUT</a>
                     <ul class="submenu">
-                        <li><a href="prologue.html">펜션소개</a></li>
+                        <li class="mapAPI"><a href="prologue.html">펜션소개</a></li>
                         <li><a href="travel.html">주변여행지</a></li>
                     </ul>
                 </li>
@@ -38,7 +38,7 @@
                     <a href="reservation.html" class="menutitle">RESERVATION</a>
                     <ul class="submenu">
                         <li><a href="reservation.html">예약안내</a></li>
-                        <li><a href="https://bit.ly/38Zeuef" target="_blank">실시간예약</a></li>
+                        <li class="booking"><a href="#">실시간예약</a></li>
                     </ul>
                 </li>
             </ul>
