--- a/layout.html
+++ b/layout.html
@@ -23,14 +23,13 @@
         <div class="imgHolder">
             <img
                 src='imgs/pension_view_01.jpg' alt="pension view" />
-            <div class='title'>Landscape</div>
-
+            <div class='title'>ROOM's Layout</div>
         </div>
 
         <section>
             <article class="layout_spot">
                 <div class="spot_txt">
-                    <h3 class="place-title">ROOM's Layout 
+                    <h3 class="place-title">
                         <span>펜션 배치도</span>
                     </h3>
                     <p>
